# llm-rosetta

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  Makefile  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  sdk-compatibility.yml
analysis/: COMPETITIVE_ANALYSIS.md  anthropic_ir_mapping.md  google_genai_ir_mapping.md  openai_chat_ir_mapping.md  openai_responses_ir_mapping.md  openapi_specs_and_open_responses.md  sdk_response_structures.md
analysis/provider_messages_typing_schemas/: ir_design_final.md
benchmarks/: bench_conversion.py  bench_litellm_comparison.py  bench_real_litellm_comparison.py  bench_real_payload.py  litellm_comparison.json  real_litellm_comparison.json  real_payload_results.json  results.json
dev_scripts/: test_roundtrip_inflation.py  test_roundtrip_live.py
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
docs/: changelog.md  error_handling.md  index.md  roadmap.md
docs/api/: converters.md  index.md  shims.md  tool-ops.md  types.md  utils.md
docs/development/: index.md
docs/examples/: cross-provider.md  index.md  tool-calling.md
docs/gateway/: admin-panel.md  cli-integrations.md  cli.md  configuration.md  index.md  validation-cli.md  validation-sdk.md  validation.md
docs/getting-started/: basic-usage.md  index.md  installation.md  quickstart.md
docs/guide/: api-layers.md  api-standards.md  auto-detection.md  compatibility.md  concepts.md  converters.md  index.md  ir-types.md  reasoning.md  shims.md  streaming.md
docs/provider_messages_typing_schemas/: DESIGN_SUMMARY.md  anthropic.md  comparison.md  google.md  ir_design.md  ir_design_final.md  ir_design_revised.md  openai.md  openai_responses.md
examples/: README_en.md  README_zh.md  common.py  multi_provider_query.py  multi_turn_chat.py  tools.py  weather_tool.py
examples/gateway/: config.jsonc  gateway.py  requirements.txt
examples/rest_based/: cross_an_gg.py  cross_an_gg_stream.py  cross_an_or.py  cross_an_or_stream.py  cross_gg_or.py  cross_gg_or_rest.py  cross_gg_or_stream.py  cross_oc_an.py  cross_oc_an_rest.py  cross_oc_an_stream.py  cross_oc_gg.py  cross_oc_gg_rest.py  cross_oc_gg_stream.py  cross_oc_or.py  cross_oc_or_stream.py  test_anthropic_rest.py  test_google_rest.py  test_google_sequential_calls.py  test_google_sequential_with_tools.py  test_google_thought_signature.py  test_openai_chat_rest.py  test_openai_responses_rest.py
examples/sdk_based/: cross_an_gg.py  cross_an_gg_stream.py  cross_an_or.py  cross_an_or_stream.py  cross_gg_or.py  cross_gg_or_stream.py  cross_oc_an.py  cross_oc_an_stream.py  cross_oc_gg.py  cross_oc_gg_stream.py  cross_oc_or.py  cross_oc_or_stream.py  multi_turn_chat.py  test_openai_chat_converter.py  test_responses_api_only.py
plans/: architecture.md  body_converter_legacy.md  converter_redesign.md  cross_provider_examples.md  openai_chat_converter_refactor.md  remaining_converter_refactor.md  stream_converter_improvement.md
scripts/: extract_google_types.py  extract_tool_choice_types.py  merge-pr.sh  rosetta-test-claude-code.sh  rosetta-test-codex.sh  rosetta-test-kilo.sh  rosetta-test-opencode.sh  run_gateway_integration.sh
src/llm_rosetta/: __init__.py  auto_detect.py  tool_ops.py
src/llmir/: __init__.py  auto_detect.py  exceptions.py
tests/: test_anthropic_converter.py  test_auto_detect.py  test_converters_base.py  test_error_handling.py  test_google_converter.py  test_ir_types.py  test_openai_chat_converter.py  test_openai_responses_converter.py  test_public_api.py  test_shims.py  test_tool_ops.py  test_transforms.py
tests/converters/: test_anthropic_converter.py  test_anthropic_full_conversion.py  test_base.py  test_google_converter.py  test_google_full_conversion.py  test_openai_chat_converter.py  test_openai_chat_full_conversion.py  test_openai_responses_converter.py  test_openai_responses_full_conversion.py  test_roundtrip_inflation.py  test_strip_orphaned_tool_config.py
tests/gateway/: conftest.py  test_admin_metrics.py  test_admin_request_log.py  test_auth.py  (+3 more)
(+224 files in other folders)
