[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmir"
version = "0.0.1"
description = "A library to convert between different LLM provider API standards using intermediate representation (IR)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
google = ["google-genai"]
dev = ["python-dotenv", "pytest"]
all = ["llmir[openai,anthropic,google,dev]"]

[tool.setuptools.packages.find]
where = ["src"]
